@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter-rare v23.11.30-cur, done by sprscc13@mr.n0b0dy.
--;-;-;2023-11-30 22:52:41, took 00:11:35, with 80 workers, on 3392 cases, 0 failed, 0 traces, 4 retries
+-;-;-;2023-11-30 23:23:19, took 00:11:47, with 80 workers, on 3392 cases, 0 failed, 0 traces, 4 retries
 -;-;-;./rtr.bin
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
