@@ -3390,7 +3390,6 @@ qc pass: socks4 server
 qc pass: socks5 server
 qc pass: tacacs server
 qc pass: udp forwarder server
-todo: generalise server access- knobs
 todo: honeypot to wireformat, decode
 todo: image viewer to file manager
 todo: game butterfly hanoy, modem, mdev
