@@ -15,7 +15,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter-rare v23.11.30-cur, done by sprscc13@mr.n0b0dy.<br/>
-tested: 2023-11-30 22:52:41, took 00:11:35, with 80 workers, on 3392 cases, 0 failed, 0 traces, 4 retries<br/>
+tested: 2023-11-30 23:23:19, took 00:11:47, with 80 workers, on 3392 cases, 0 failed, 0 traces, 4 retries<br/>
 jvm: ./rtr.bin<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
